--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,25 @@
     "require": {
         "datagutten/tools": "^1.1",
         "rmccue/requests": "^1.7",
-        "christeredvartsen/php-bittorrent": "^1.1",
+        "christeredvartsen/php-bittorrent": "^2.0",
         "ext-json": "*",
-        "php": ">=7.1",
+        "php": ">=8.0",
         "ext-curl": "*",
         "ext-mbstring": "*",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "ulrichsg/getopt-php": "^3.4"
     },
     "license": "GPL-3.0-or-later",
     "autoload": {
         "psr-4": {
             "torrentupload\\": "src",
+            "torrentupload\\sites\\": "sites",
             "torrentupload\\tests\\": "tests",
             "datagutten\\Requests_extensions\\": "Requests_extensions"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.2|^9"
     },
     "bin": [
         "scripts"
